# strands-agents

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: aws-login.sh  devcontainer-lock.json  devcontainer.json  post-install.sh
.github/: copilot-instructions.md
.github/instructions/: coding-python.instructions.md
.github/workflows/: ci.yml
docs/: CODING_CONVENTIONS.md
src/my_strands_agents/: hello_world.py
src/my_strands_agents/patterns/: __init__.py  research.py
src/my_strands_agents/simple/: agent.py
src/my_strands_agents/utils/: __init__.py  agent_factory.py
tests/: conftest.py
tests/unit/: test_agent_factory.py  test_hello_world.py
