[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-strands-agents"
version = "0.1.0"
description = "Strands Agents sandbox project for learning and experimentation"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Mario Scalas", email = "mario.scalas+github@gmail.com" }
]
dependencies = [
    "boto3>=1.43.0",
    "strands-agents[openai]>=1.40.0",
    "strands-agents-tools>=0.8.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
hello = "my_strands_agents.hello_world:app"
simple_agent = "my_strands_agents.simple.agent:app"


[tool.uv]
package = true

[tool.ruff]
target-version = "py314"
line-length = 128
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "C901",  # mccabe complexity
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "ARG"]  # Allow magic values and asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["my_strands_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/my_strands_agents",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (requires local services like testcontainers)",
    "e2e: End-to-end tests (requires external services like AWS Bedrock)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["strands.*", "strands_tools.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
# Add paths here to exclude them from the coverage report.
# Useful for exploratory/experimental packages not yet covered by tests.
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/.venv/*",
    "src/my_strands_agents/simple/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
